[tool.poetry]
name = "webapp-sandbox"
version = "0.1.0"
description = ""
authors = ["Carolina Lennon <14179052+lennon-c@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
streamlit = "^1.40.2"
plotly = "^5.24.1"
wordcloud = "^1.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
